--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <i class="fa-solid fa-star"></i>
           </div>
           <div class="form">
-            <form method="post">
+            <form action="#" method="post">
               <div class="block">
                 <label for="name">Name</label>
                 <input type="text" name="name" id="name" />
